<?xml version="1.0"?>
<package format="2">
  <name>carry_my_luggage</name>
  <version>0.0.0</version>
  <description>The carry_my_luggage package</description>

  <maintainer email="i.cebolladagracia@gmail.com">isacg5</maintainer>
  <maintainer email="noel.jimenez.gar@gmail.com">noel215</maintainer>
  <maintainer email="amaayorga@gmail.com">amayorga27</maintainer> 

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
