<?xml version="1.0"?>
<package format="2">
  <name>recepcionist</name>
  <version>0.0.0</version>
  <description>The recepcionist package</description>

  <maintainer email="i.cebolladagracia@gmail.com">isacg5</maintainer>
  <maintainer email="noel.jimenez.gar@gmail.com">noel215</maintainer>  

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>